SERVER-9481 Fixes fluctuating between ROLLBACK and SECONDARY when ROLLBACK is impossible

Only leave ROLLBACK when successful and go to FATAL when ROLLBACK is impossible
because we are not willing to rollback so much data

Signed-off-by: Matt Dannenberg <matt.dannenberg@10gen.com>